section class"work"

--- a/index.html
+++ b/index.html
@@ -118,14 +118,24 @@
              <div class="conteiner">          
              <h2 class="title">Чем мы занимаемся</h2>                       
              <ul class="box-img">
-                 <li>
+                 <li class="work-box">
                      <img src="./images/box1.jpg" alt="планирование" width="370">
+                     <div class="case">
+                       <h3 class="title-case">Десктопные приложения</h3>
+                     </div>
                  </li>
-                 <li>
+                 <li class="work-box">
                      <img src="./images/box2.jpg" alt="современные технологии" width="370">
+                     <div class="case">
+                      <h3 class="title-case">Мобильные приложения</h3>
+                     </div>
+                     
                  </li>
-                 <li>               
+                 <li class="work-box">              
                      <img src="./images/box3.jpg" alt="дизайн" width="370">
+                     <div class="case">
+                      <h3 class="title-case">Дизайнерские решения</h3>
+                     </div>
                  </li>
              </ul> 
              </div>                      
