div "box-case" секция "чем занимаемся"

--- a/index.html
+++ b/index.html
@@ -119,23 +119,28 @@
              <h2 class="title">Чем мы занимаемся</h2>                       
              <ul class="box-img">
                  <li class="work-box">
+                   <div class="box-case">
                      <img src="./images/box1.jpg" alt="планирование" width="370">
                      <div class="case">
                        <h3 class="title-case">Десктопные приложения</h3>
                      </div>
+                    </div>
                  </li>
                  <li class="work-box">
+                  <div class="box-case">
                      <img src="./images/box2.jpg" alt="современные технологии" width="370">
                      <div class="case">
                       <h3 class="title-case">Мобильные приложения</h3>
                      </div>
-                     
+                    </div>
                  </li>
-                 <li class="work-box">              
+                 <li class="work-box"> 
+                  <div class="box-case">        
                      <img src="./images/box3.jpg" alt="дизайн" width="370">
                      <div class="case">
                       <h3 class="title-case">Дизайнерские решения</h3>
                      </div>
+                    </div>
                  </li>
              </ul> 
              </div>                      
