--- a/index.html
+++ b/index.html
@@ -416,6 +416,15 @@
        </div>
       </div>                
    </footer>
+
+   <div class="backdrop is-hidden" id="backdrop" data-modal>
+    <div class="modal-content" id="modal-content">
+      <button data-modal-close type="button">close</button>
+           
+    </div>
+  </div>
+
+  <script src="./js/modal.js" type="module"></script>
  </body> 
  </html>
 
