--- a/portfolio.html
+++ b/portfolio.html
@@ -81,8 +81,11 @@
              <li class="projekt-choice">
                 <div class="activ"> 
                 <article class="card">
-                   <div class="card-thumb">
+                    <div class="card-thumb"> 
                       <img src="./images/project1.jpg" alt="проект 1" width="370">
+                      <div class="card-box">
+                         <p class="card-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                      </div>
                    </div>
                 </article>
                 <div class="card-content">                                   
