--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
                     <div class="card-thumb"> 
                       <img src="./images/project1.jpg" alt="проект 1" width="370">
                       <div class="card-box">
-                         <p class="card-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                         <p class="card-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                       </div>
                    </div>
                 </article>
