--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
    <div class="modal-content">
       <button data-modal-close class="tape">
         
-      <svg class="modal-tape" data-modal-close>
+      <svg class="modal-tape">
         <use href="./images/icon/sprite.svg#icon-close"></use>
       </svg>
     
