--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,8 @@
          <ul class="project">
              <li class="projekt-choice">
                 <div class="activ"> 
-                <article class="card">
+                   <a href="#" class="card">
+                <!-- <article > -->
                     <div class="card-thumb"> 
                       <img src="./images/project1.jpg" alt="проект 1" width="370">
                       <div class="card-box">
@@ -88,6 +89,7 @@
                       </div>
                    </div>
                 </article>
+               </a>
                 <div class="card-content">                                   
                      <h3 class="portfolio-item">Технокряк</h3>
                      <p class="portfolio-text">Веб-сайт</p>                                   
