--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,8 @@
          <div class="conteiner">
          <ul class="project">
              <li class="projekt-choice">
-               <a href="#" class="card">
+               <!-- <a href="#" class="card"> -->
+                  <article class="card">
                 <div class="activ">                                     
                     <div class="card-thumb"> 
                       <img src="./images/project1.jpg" alt="проект 1" width="370">
@@ -87,11 +88,11 @@
                      <h3 class="portfolio-item">Технокряк</h3>
                      <p class="portfolio-text">Веб-сайт</p>                                   
                 </div> 
-                </div>
-                </a>
+                </div>                
+               </article>
                 </li>
                 <li class="projekt-choice">
-                  <a href="#" class="card">
+                  <article class="card">
                   <div class="activ"> 
                  
                      <div class="card-thumb">
@@ -105,10 +106,10 @@
                    <p class="portfolio-text">Дизайн</p>                                 
                  </div> 
                 </div>
-                </a> 
+               </article>
                 </li>
                  <li class="projekt-choice">
-                  <a href="#" class="card">
+                  <article class="card">
                   <div class="activ"> 
                  
                      <div class="card-thumb">
@@ -122,10 +123,10 @@
                    <p class="portfolio-text">Приложение</p>                             
                  </div> 
                 </div>
-               </a> 
+               </article>
                </li>
                  <li class="projekt-choice">
-                  <a href="#" class="card">
+                  <article class="card">
                   <div class="activ">                 
                      <div class="card-thumb">
                         <img src="./images/project4.jpg" alt="проект4" width="370">
@@ -138,10 +139,10 @@
                   <p class="portfolio-text">Маркетинг</p>                     
                  </div> 
                 </div>
-               </a> 
+               </article>
                </li>
                  <li class="projekt-choice">
-                  <a href="#" class="card">
+                  <article class="card">
                   <div class="activ">                  
                      <div class="card-thumb">
                         <img src="./images/project5.jpg" alt="проект5" width="370">
@@ -154,10 +155,10 @@
                   <p class="portfolio-text">Приложение</p>               
                  </div> 
                 </div>
-               </a> 
+               </article>
                </li>
                  <li class="projekt-choice">
-                  <a href="#" class="card">
+                  <article class="card">
                   <div class="activ">                   
                      <div class="card-thumb">
                         <img src="./images/project6.jpg" alt="проект6" width="370">
@@ -170,10 +171,10 @@
                  <p class="portfolio-text">Веб-сайт</p>         
                  </div> 
                 </div>
-               </a> 
+               </article>
                </li>
                  <li class="projekt-choice">
-                  <a href="#" class="card">
+                  <article class="card">
                   <div class="activ">                   
                      <div class="card-thumb">
                         <img src="./images/project7.jpg" alt="проект7" width="370">
@@ -186,10 +187,10 @@
                    <p class="portfolio-text">Дизайн</p>    
                  </div> 
                 </div>
-               </a> 
+               </article>
                </li>
                  <li class="projekt-choice">
-                  <a href="#" class="card">
+                  <article class="card">
                   <div class="activ">                  
                      <div class="card-thumb">
                         <img src="./images/project8.jpg" alt="проект8" width="370">
@@ -202,10 +203,10 @@
                    <p class="portfolio-text">Маркетинг</p>
                  </div> 
                  </div>
-               </a> 
+               </article>
                </li>
                  <li class="projekt-choice">
-                  <a href="#" class="card">
+                  <article class="card">
                   <div class="activ">                 
                      <div class="card-thumb">
                         <img src="./images/project9.jpg" alt="проект9" width="370">
@@ -218,7 +219,7 @@
                   <p class="portfolio-text" >Приложение</p>
                 </div>  
                </div>
-            </a> 
+            </article>
             </li>                  
          </ul>
         </div>
