--- a/index.html
+++ b/index.html
@@ -418,17 +418,21 @@
         <use href="./images/icon/sprite.svg#icon-close"></use>
       </svg>    
        </button>
-       <!-- <form>
+        <form>
          <label for="name">Имя</label>
          <input type="text" name="name-user" id="name">
+         <br>
          <label for="phone">Телефон</label>
          <input type="tel" name="phone" id="phone">
+         <br>
          <label for="mail">Почта</label>
          <input type="email" name="mail" id="mail">
+         <br>
          <label for="comment">Коментарий</label>
-         <input type="text" name="comment" id="comment">
+         <textarea name="comment" id="comment" rows="10"></textarea>
+         <br>
          <button type="submit">Отправить</button>
-       </form> -->
+       </form> 
    </div>
   </div>  
    
