--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
         <use href="./images/icon/sprite.svg#icon-close"></use>
       </svg>    
        </button>
-        <form>
+        <!-- <form>
          <label for="name">Имя</label>
          <input type="text" name="name-user" id="name">
          <br>
@@ -432,7 +432,7 @@
          <textarea name="comment" id="comment" rows="10"></textarea>
          <br>
          <button type="submit">Отправить</button>
-       </form> 
+       </form>  -->
    </div>
   </div>  
    
